<resources>
    <string name="app_name">Parts Crib Management System</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up" translatable="false">SignUpActivity</string>
    <string name="title_activity_parts"> Parts</string>
    <string name="keypin_entry_info">Type in pin using phone or view the most recently entered pin in real-time</string>
    <string name="tap_stat_info">View the most recent tap time and location for RFID enabled student card</string>
    <string name="lock_account_info">Immediately disable the ability to tap RFID using your assigned tag </string>
    <string name="keypin_entry_button">Keypin Entry</string>
    <string name="tap_stats_button">Tap Stats</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="title_activity_request" translatable="false">RequestsActivity</string>
    <string name="title_activity_forgotten_password">ForgottenPasswordActivity</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="title_activity_main2" translatable="false">MainActivity2</string>
    <string name="hint_timepicker">Expected time (HH:MM) of loan</string>
    <string name="hint_time_length">Expected length of loan period in hours</string>
    <string name="number_requests__made_label">Number of requests made:</string>
    <string name="number_requests_out_label">Number of Outstanding requests:</string>
    <string name="loan_standing_label">Loan Standing:</string>
    <string name="where_are_we_located">Where are we located?</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="outstanding_items_to_be_returned">Outstanding items to be returned:</string>
    <string name="hint_datepicker">Expected date (MM/DD/YYYY) of loan</string>
    <string name="initial_quantity_value">0</string>
    <string name="submit_request_button_label">Submit Request</string>
    <string name='add_part_label'>Add parts</string>
    <string name="part_name_col_label">Name</string>
    <string name="part_quantity_col_label">Quantity</string>
    <string name="new_request_button">Make New Request</string>
    <string name="historical_request_button">Historcal Requests</string>
    <string name="new_request_info">Create new request for parts</string>
    <string name="historical_request_info">View historical requests and analytics</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sync_pref" translatable="false">sync_pref</string>
    <string name="pref_syncconnectionType">Sync connection type</string>
    <string name="displayName">DisplayName</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="home">Home</string>
    <string name="loans">Loans</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="email_address">Email Address</string>
    <string name="title_activity_part_category">PartCategory</string>
    <string name="title_activity_request_detail">RequestDetailActivity</string>
    <string name="title_activity_account_history">AccountHistory</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_tap_stats">TapStatsActivity</string>
    <string name="title_activity_keypin_entry">KeypinEntry</string>
    <string name="distanceText">Current Parts Crib Location</string>
    <string name="curr_lat_label">Lat</string>
    <string name="curr_long_label">Long</string>
    <string name="map_button">Go to Map</string>
    <string name="title_activity_location">LocationActivity</string>
</resources>
